--- a/myntra/src/Components/CSS Files/Login.css
+++ b/myntra/src/Components/CSS Files/Login.css
@@ -91,9 +91,13 @@
       font-weight: 600;
   }
   
-  #signin > div:nth-child(4)>p:nth-child(2),p:nth-child(4){
+  #signin > div:nth-child(4)>p:nth-child(2){
       color: #ff3f6c;
   }
+
+  #signin > div:nth-child(4)>p:nth-child(4){
+    color: #ff3f6c;
+}
   
   #signin > div:nth-child(4)>p:nth-child(3){
       margin-right: 3px;
